done until experience page

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 							</h5>
 						</div>
 
-						<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+						<div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
 							<div class="card-body bg-dark">
 								<ul id="smx-ul">
 									<li>Administrating Systems: EBMS (Events and Banquets), WINPARK (Parking System)</li>
@@ -171,7 +171,20 @@
 
 						<div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
 							<div class="card-body bg-dark">
-								Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+								
+								<ul class="alta-ul">
+									<li>Single handedly running the MIS department</li>
+									<li>Responsible for all the projects, transactions and negotiations in all suppliers of MIS department</li>
+									<li>Supporting the employee if they have problem on their computer hardware or software, printer, telephone and assisting on system personally or via telephone or cellphone.</li>
+									<li>Securing employees accounts, hotel files and data</li>
+									<li>Troubleshooting computers, printer, locksets, telephone, POS and CCTV, </li>
+									<li>Operating CCTV and Server Room</li>
+									<li>Maintaining and troubleshooting Wi-Fi of Hotel using UniFi Controller</li>
+									<li>Layouts for hotel (Signage, Tarpaulin, Marketing Collaterals)</li>
+									<li>Web hosting for the emails and domain (BLUEHOST, PHILWEB AND GSUITE)</li>
+									<li>PABX system (PABX, telephone and Locals)</li>
+									<li>Securing, troubleshooting and maintaining all the IT equipment’s like switch, firewall, router, printers and others</li>
+								<ul>
 							</div>
 						</div>
 					</div>			
@@ -182,7 +195,8 @@
 			</div>
 		</div>
 	</div>
-	<!-- Experience section end -->
+
+		<!-- Experience section end -->
 
 
 
