--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 	<!-- NavBar Section Start -->
 	<div id="navbar1">
-		<nav class="navbar navbar-expand-lg navbar-dark pt-2 offset-1" id="navbar-main">
+		<nav class="navbar navbar-expand-md navbar-dark pt-2 offset-1" id="navbar-main">
 
 			<a class="navbar-brand" href="index.html"><img src="./images/cid-logo.png" id="cid-logo-top"></a></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -64,7 +64,7 @@
 			</div>
 
 			<div class="text-light d-flex flex-column align-items-left" id="welcome-page-3">
-				<div>As a designer and developer, I help companies around the world amazing websites,</div>
+				<div>As a designer and developer, I want to be with companies around the world to create amazing websites,</div>
 				<div>app and services that are simple, but elegant and easy to use</div>
 
 			</div>
@@ -207,40 +207,22 @@
 
 					<!-- First Website Start -->
 					<div class="p-3">
-						<img class="img-fluid" src="./images/mywebsite.png">
+						<a href="./index.html"><img class="img-fluid" src="./images/mywebsite.png"></a>
 						<h5 class="p-2">My First Website Project using HTML, CSS and Bootstrap</h5>
-                   <!--  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> -->
             </div>
 
 
             <!-- Node JS Card Start -->
             <div class="p-3">
-            	<img class="img-fluid" src="https://res.cloudinary.com/practicaldev/image/fetch/s--X1qyxgQM--/c_imagga_scale,f_auto,fl_progressive,h_900,q_auto,w_1600/https://dev-to-uploads.s3.amazonaws.com/i/238angygrj6cj768j9es.png">
+            	<a href="./index.html"><img class="img-fluid" src="https://res.cloudinary.com/practicaldev/image/fetch/s--X1qyxgQM--/c_imagga_scale,f_auto,fl_progressive,h_900,q_auto,w_1600/https://dev-to-uploads.s3.amazonaws.com/i/238angygrj6cj768j9es.png"></a>
             	<h5 class="p-2">My First Node.JS Project</h5>
-                   <!--  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p> -->
             </div>
 
 
             <!-- E commerce Card Start -->
             <div class="p-3">
-            	<img class="img-fluid" src="./images/lazada.png">
+            	<a href="https://www.lazada.com.ph/?exlaz=d_1:mm_150050845_51350203_2010350203::11:16280055359!136285272369!lazada!e!aud-1293936317495:kwd-19342147066!c&exlaz=d_1:mm_150050845_51350203_2010350203::11:16280055359!136285272369!lazada!e!aud-1293936317495:kwd-19342147066!c!!!!582980954775!&gclid=CjwKCAiAyfybBhBKEiwAgtB7fuh_Mju93RNCvZ4qfmnSjgEhqD-FNLzWAnxf9NuoqOdKolL68RtyQhoCgJcQAvD_BwE"><img class="img-fluid" src="./images/lazada.png"></a>
             	<h5 class="p-2">My First E-Commerce Website Project</h5>
-                <!--     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> -->
             </div>
         </div>
     </div>
@@ -279,23 +261,25 @@
     				<textarea class="form-control" id="message" rows="7"></textarea>
     			</div>
     			<button type="submit" class="btn btn-dark" data-toggle="modal" data-target="#exampleModal">Send Email</button>
-
-
-
-
-    		</form>
+   		</form>
 
     	</div>
+
+    	
+
 
     	<!-- External Sites -->
-    	<div class="bg-transparent text-light d-flex mb-3">
-    		<div class="mr-auto p-2 bd-highlight"><a href="./index.html"><img class="p-2" id="cid-logo" src="images/cid-logo.png"/></a></div>
-    		<div class="p-2"><a href="https://www.facebook.com/seniorito07/" target="_blank"><img class="p-2" id="facebook1" src="images/facebook.png"/></a></div>
-    		<div class="p-2"><a href="https://www.instagram.com/toperman07/" target="_blank"><img class="p-2" id="instagram1" src="images/instagram.png"/></a></div>
-    		<div class="p-2"><a href="https://www.linkedin.com/in/christoper-ian-de-alday-273471146/" target="_blank"><img class="p-2" id="linkedin" src="images/linkedin.png"/></a> </div>
+       	<div class="text-light d-flex flex-sm-row">
+            <div class="d-flex mr-auto p-2"><a href="./index.html"><img class="p-2" id="cid-logo" src="images/cid-logo.png"/></a></div>
+            <div class="w-25 d-flex d-md-flex flex-row-reverse ml-auto">
+                 <div class="p-1 mr-2"><a href="https://www.facebook.com/seniorito07/" target="_blank"><img class="p-2" id="facebook1" src="images/facebook.png"/></a></div>
+                 <div class="p-1"><a href="https://www.instagram.com/toperman07/" target="_blank"><img class="p-2" id="instagram1" src="images/instagram.png"/></a></div>
+                 <div class="p-1"><a href="https://www.linkedin.com/in/christoper-ian-de-alday-273471146/" target="_blank"><img class="p-2" id="linkedin" src="images/linkedin.png"/></a></div>
+                              
+            </div>
+        </div>
 
 
-    	</div>
 
 
     </div>
