added bg color revision on footer

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 
 
     <!-- footer Section -->
-    <div class="bg-primary text-center fixed-bottom p-1 text-light">
+    <div class="bg-secondary text-center fixed-bottom p-1 text-light">
     	All assets are used for educational purposes only.
     </div>
 </table>
