revision on my code due to error on loading images on hosting using github

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
 					<!-- First Website Start -->
 					<div class="p-3">
-						<a href="./index.html"><img class="img-fluid" src="./images/mywebsite.png"></a>
+						<a href="https://iandealday.github.io/webportfolio/"><img class="img-fluid" src="./images/mywebsite.png"></a>
 						<h5 class="p-2">My First Website Project using HTML, CSS and Bootstrap</h5>
             </div>
 
@@ -221,7 +221,7 @@
 
             <!-- E commerce Card Start -->
             <div class="p-3">
-            	<a href="https://www.lazada.com.ph/?exlaz=d_1:mm_150050845_51350203_2010350203::11:16280055359!136285272369!lazada!e!aud-1293936317495:kwd-19342147066!c&exlaz=d_1:mm_150050845_51350203_2010350203::11:16280055359!136285272369!lazada!e!aud-1293936317495:kwd-19342147066!c!!!!582980954775!&gclid=CjwKCAiAyfybBhBKEiwAgtB7fuh_Mju93RNCvZ4qfmnSjgEhqD-FNLzWAnxf9NuoqOdKolL68RtyQhoCgJcQAvD_BwE"><img class="img-fluid" src="./images/lazada.png"></a>
+            	<a href="https://www.lazada.com.ph/"><img class="img-fluid" src="./images/lazada.png"></a>
             	<h5 class="p-2">My First E-Commerce Website Project</h5>
             </div>
         </div>
