added revisions to troubleshoot images not loading when hosting

--- a/index.html
+++ b/index.html
@@ -207,21 +207,21 @@
 
 					<!-- First Website Start -->
 					<div class="p-3">
-						<a href="https://iandealday.github.io/webportfolio/"><img class="img-fluid" src="./images/mywebsite.png"></a>
+						<a href="https://iandealday.github.io/webportfolio/" target="_blank"><img class="img-fluid" src="./images/mywebsite1.png"></a>
 						<h5 class="p-2">My First Website Project using HTML, CSS and Bootstrap</h5>
             </div>
 
 
             <!-- Node JS Card Start -->
             <div class="p-3">
-            	<a href="./index.html"><img class="img-fluid" src="https://res.cloudinary.com/practicaldev/image/fetch/s--X1qyxgQM--/c_imagga_scale,f_auto,fl_progressive,h_900,q_auto,w_1600/https://dev-to-uploads.s3.amazonaws.com/i/238angygrj6cj768j9es.png"></a>
+            	<a href="https://iandealday.github.io/webportfolio/" target="_blank"><img class="img-fluid" src="https://res.cloudinary.com/practicaldev/image/fetch/s--X1qyxgQM--/c_imagga_scale,f_auto,fl_progressive,h_900,q_auto,w_1600/https://dev-to-uploads.s3.amazonaws.com/i/238angygrj6cj768j9es.png"></a>
             	<h5 class="p-2">My First Node.JS Project</h5>
             </div>
 
 
             <!-- E commerce Card Start -->
             <div class="p-3">
-            	<a href="https://www.lazada.com.ph/"><img class="img-fluid" src="./images/lazada.png"></a>
+            	<a href="https://www.lazada.com.ph/" target="_blank"><img class="img-fluid" src="./images/lazada1.png"></a>
             	<h5 class="p-2">My First E-Commerce Website Project</h5>
             </div>
         </div>
