revised e commerce image name

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
             <!-- E commerce Card Start -->
             <div class="p-3">
-            	<a href="https://www.lazada.com.ph/" target="_blank"><img class="img-fluid" src="./images/Lazada1.png"></a>
+            	<a href="https://www.lazada.com.ph/" target="_blank"><img class="img-fluid" src="./images/lazada.png"></a>
             	<h5 class="p-2">My First E-Commerce Website Project</h5>
             </div>
         </div>
