--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 	<!-- NavBar Section Start -->
 	<div id="navbar1">
-		<nav class="navbar navbar-expand-md navbar-dark pt-2 offset-1" id="navbar-main">
+		<nav class="navbar navbar-expand-lg navbar-dark pt-2 offset-1" id="navbar-main">
 
 			<a class="navbar-brand" href="index.html"><img src="./images/cid-logo.png" id="cid-logo-top"></a></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
