--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
 	<div id="navbar1">
 		<nav class="navbar navbar-expand-lg navbar-dark pt-2 offset-1" id="navbar-main">
 
-			<a class="navbar-brand" href="index.html"><img src="./images/cid-logo.png" id="cid-logo-top"></a></a>
+			<a class="navbar-brand" href="https://iandealday.github.io/webportfolio/"><img src="./images/cid-logo.png" id="cid-logo-top"></a></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 
 			<div class="collapse navbar-collapse offset-md-7 col-md-3" id="navbarNav">
-				<ul class="navbar-nav">
-					<li class="nav-item active p-2">
-						<a class="nav-link" href="#about-page">About me<span class="sr-only">(current)</span></a>
+				<ul class="navbar-nav navBar">
+					<li class="nav-item p-2">
+						<a class="nav-link nav1" href="#about-page">About me</a>
 					</li>
 					<li class="nav-item p-2">
 						<a class="nav-link" href="#exp-main">Experience</a>
@@ -44,6 +44,9 @@
 					</li>
 					<li class="nav-item p-2" id="contact-tab">
 						<a class="nav-link" href="#contactme">Contact</a>
+					</li>
+					<li class="nav-item p-2 active" id="resume">
+						<a class="nav-link resume" target="_blank" href="https://drive.google.com/file/d/1_vZl36jmqCmpKCJl4_haFU-y-vymxi4R/view?usp=share_link">Resume</a>
 					</li>
 				</ul>
 			</div>
@@ -58,9 +61,9 @@
 
 		<div class="pl-5 d-flex flex-column" id="welcome-page-2">
 			<div class="text-light" id="welcome-page-1">
-				<div>Hi</div>
-				<div>I'm Christoper Ian</div>
-				<div>Full-stack Web Developer</div>                  
+				<div class="font-bold">Hi</div>
+				<div class="font-bold">I'm Christoper Ian</div>
+				<div class="font-bold">Full-stack Web Developer</div>                  
 			</div>
 
 			<div class="text-light d-flex flex-column align-items-left" id="welcome-page-3">
@@ -78,17 +81,24 @@
 	<!-- About me Section Start  -->
 
 	<div  id="about-page" class="container-fluid text-justify text-center mt-4">
-		<h2 >A Little Bit About Me</h2>
+		<h2 class="font-bold">A Little Bit About Me</h2>
 		<div class="mb-4 row mt-4 justify-content-around">
-			<div class="col-md-6 col-sm-12 order-2 order-md-1">
+			<div class="col-md-12 col-sm-12 order-2 order-md-2 p-3 col-lg-6 order-lg-1">
 				<h5 class="p-3">Christoper Ian de Alday</h5>
-				<p class="text-justify">Hey! My name is Ian and I'm a web developer with a passion for front end and back end development. I already have 5 years of experience working on a different companies as an IT. With that I can proudly say that I'm well equipped when it comes to on how to troubleshoot things that is related to technology, system administrator, technical thinking, project handling, and managing IT Department of an establishment. Lately, I realize that my weakness on my career is I don't have any expertise on any programming language. That's why right now I'm currently studying at Zuitt Coding Bootcamp and aspiring to become a great software engineer someday.</p>
+				<p class="text-justify">Hello, my name is Ian. I have been working in the IT industry for the past five years and most recently served as an Assistant IT Manager at SMX Convention Center under SM Group of Companies. In this role, I was responsible for ensuring that all the systems, servers, file servers, web servers, firewalls, switches, CCTV, Wi-Fi, and local area networks were running efficiently.</p>
 
-				<p class="text-justify">When I'm not on the computer, I enjoy traveling, adventure, mobile games, eating and watching movies as these are my stress reliever.</p>
+				<p class="text-justify">Additionally, I was responsible for providing technical support to employees, answering their queries, and troubleshooting software and hardware issues. I also had the opportunity to handle project management tasks, such as setting up and configuring devices for new branches and monitoring implementation to ensure successful execution.</p>
+
+				<p class="text-justify">One of the exciting moments of my career was when I had to develop a website to monitor people inside the venue in real-time due to safety protocols during the pandemic. This project sparked my interest in web development, and I decided to learn more about building websites. That's why I enrolled in a reputable boot camp last year and took a 3-4 months Full Stack Web Developer Course and recently graduated this February 28, 2023.</p>
+
+				<p class="text-justify">During my training, I gained experience using front-end tools such as HTML, CSS, JavaScript, and frameworks like Bootstrap, Tailwind and React. For my backend development I gained experience on developing using Node.Js and Express.JS.</p>
+
+				<p class="text-justify">After my graduation from Zuitt, I continued to pursue my passion for programming and enrolled in a short course to learn Python Basic Syntax, Python OOP, MySQL, and frameworks such as Django. This additional training allowed me to expand my knowledge and skills further that makes me more competitive in the industry, and I'm eager to apply these skills to contribute to your company's success.</p>
+				<!-- <p class="text-justify">When I'm not on the computer, I enjoy traveling, adventure, mobile games, eating and watching movies as these are my stress reliever.</p> -->
 
 			</div>
-			<div class="col-md-6 col-sm-12 order-1 order-sm-1">
-				<img class="img-fluid" src="./images/ian.jpeg"/ id="img-ian">
+			<div class="col-md-12 col-sm-12 order-1 order-sm-1 center-image col-lg-6 order-lg-1">
+				<img src="./images/ian.jpeg" id="img-ian">
 			</div>
 		</div>
 	</div>     
@@ -122,7 +132,7 @@
 						</div>
 
 						<div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-							<div class="card-body bg-dark">
+							<div class="card-body">
 								<ul id="smx-ul">
 									<li>Administrating Systems: EBMS (Events and Banquets), WINPARK (Parking System)</li>
 									<li>Supporting the employee if they have problem on their computer hardware or software, printer, telephone and assisting on system personally or via telephone or cellphone</li>
@@ -165,13 +175,13 @@
 					<div class="card bg-dark" >
 						<div class="card-header" id="headingOne">
 							<h5 class="mb-0">
-								<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+								<button class="btn btn-link" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseOne">
 									Duties and Responsibilities
 								</button>
 							</h5>
 						</div>
 
-						<div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+						<div id="collapseTwo" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
 							<div class="card-body bg-dark">
 								
 								<ul id="alta-ul">
@@ -290,7 +300,7 @@
 
 
     <!-- footer Section -->
-    <div class="bg-secondary text-center fixed-bottom p-1 text-light">
+    <div class="bg-dark text-center fixed-bottom p-1 text-light">
     	All assets are used for educational purposes only.
     </div>
 </table>
