revised code for social media links in small screen sizes

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
+
+	
+		<link rel="stylesheet"
+		href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+		<!-- or -->
+		<!-- <link rel="stylesheet"
+		href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"> -->
+
 </head>
 
 <body class="text-center text-light" id="mainbg">
@@ -69,18 +77,13 @@
 			<div class="text-light" id="welcome-page-1">
 				<div class="font-bold">Hi</div>
 				<div class="font-bold">I'm Christoper Ian</div>
-				<div class="font-bold">Full-stack Web Developer</div>
+				<div class="font-bold sm-size">Full-stack Web Developer</div>
 			</div>
 
 			<div class="text-light d-flex flex-column align-items-left" id="welcome-page-3">
 				<div>As a designer and developer, I want to be with companies around the world to create amazing
 					websites,</div>
 				<div>app and services that are simple, but elegant and easy to use</div>
-
-			</div>
-
-			<div>
-				<button>Talk to me!</button>
 
 			</div>
 
@@ -350,7 +353,7 @@
 
 
 	<!-- SOCIAL MEDIA LINKS START -->
-	<div class="social-icons">
+	<div class="social-icons-container">
 		<div id="github" class="social-icon">
 			<a href="#" target="_blank">
 				<i class="fa-brands fa-github fa-2xl"></i>
@@ -373,8 +376,12 @@
 		</div>
 	</div>
 
+	<div id="social-button">
+			<i class='bx bx-up-arrow-circle arrow-up'></i>
+	</div>
 	<!-- SOCIAL MEDIA LINKS END -->
 
+	
 	<!-- footer Section -->
 	<!-- <div class="bg-dark text-center fixed-bottom p-1 text-light footer-style">
 		All assets are used for educational purposes only.
@@ -395,6 +402,11 @@
 	<!-- Font Awesome Link -->
 	<script src="https://kit.fontawesome.com/3306d21bc6.js" crossorigin="anonymous"></script>
 
+	<!-- Box Icons Link -->
+	<!-- <script src="https://unpkg.com/boxicons@2.1.3/dist/boxicons.js"></script> -->
+
+	<!-- Custom JS -->
+	<script src="./index.js"></script>
 </body>
 
 </html>
