update the font color of welcome page

--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
 
 		<div class="pl-5 d-flex flex-column" id="welcome-page-2">
 			<div class="text-light" id="welcome-page-1">
-				<div class="font-bold">Hi</div>
+				<div class="font-bold font-blue">Hi</div>
 				<div class="font-bold">I'm Christoper Ian</div>
-				<div class="font-bold sm-size">Full-stack Web Developer</div>
+				<div class="font-bold sm-size font-blue">Full-stack Web Developer</div>
 			</div>
 
-			<div class="text-light d-flex flex-column align-items-left" id="welcome-page-3">
+			<div class="text-light d-flex flex-column align-items-left mt-3" id="welcome-page-3">
 				<div>As a designer and developer, I want to be with companies around the world to create amazing
 					websites,</div>
 				<div>app and services that are simple, but elegant and easy to use</div>
@@ -381,7 +381,7 @@
 	</div>
 	<!-- SOCIAL MEDIA LINKS END -->
 
-	
+
 	<!-- footer Section -->
 	<!-- <div class="bg-dark text-center fixed-bottom p-1 text-light footer-style">
 		All assets are used for educational purposes only.
