update my links for my works

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 
 				<!-- Node JS Card Start -->
 				<div class="p-3">
-					<a href="https://iandealday.github.io/webportfolio/" target="_blank"><img class="img-fluid"
+					<a href="https://gitlab.com/batch-225-ian-de-alday/capstone-2.git" target="_blank"><img class="img-fluid"
 							src="https://res.cloudinary.com/practicaldev/image/fetch/s--X1qyxgQM--/c_imagga_scale,f_auto,fl_progressive,h_900,q_auto,w_1600/https://dev-to-uploads.s3.amazonaws.com/i/238angygrj6cj768j9es.png"></a>
 					<h5 class="p-2">My First Node.JS Project</h5>
 				</div>
@@ -283,8 +283,8 @@
 
 				<!-- E commerce Card Start -->
 				<div class="p-3">
-					<a href="https://www.lazada.com.ph/" target="_blank"><img class="img-fluid"
-							src="./images/lazadanew.png"></a>
+					<a href="https://gitlab.com/batch-225-ian-de-alday/capstone3.git" target="_blank"><img class="img-fluid"
+							src="./images/e-commerce.PNG"></a>
 					<h5 class="p-2">My First E-Commerce Website Project</h5>
 				</div>
 			</div>
